// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`github Map issue from list item to a SQS message 1`] = `
Object {
  "MD5OfMessageBody": "foobar",
}
`;

exports[`github Map issue from list item to a SQS message 2`] = `
Array [
  Object {
    "MessageBody": "{\\"owner\\":\\"kubernetes\\",\\"issue_number\\":1597,\\"repo\\":\\"k8s.io\\",\\"installation_id\\":1234}",
    "MessageGroupId": "1234",
    "QueueUrl": "something",
  },
]
`;

exports[`github Map pull request from list item to a SQS message 1`] = `
Object {
  "MD5OfMessageBody": "foobar",
}
`;

exports[`github Map pull request from list item to a SQS message 2`] = `
Array [
  Object {
    "MessageBody": "{\\"owner\\":\\"kubernetes\\",\\"pull_number\\":1596,\\"repo\\":\\"k8s.io\\",\\"installation_id\\":1234}",
    "MessageGroupId": "1234",
    "QueueUrl": "something",
  },
]
`;

exports[`github Query repo, push all into SQS 1`] = `
Array [
  Object {
    "_links": Object {
      "comments": Object {
        "href": "https://api.github.com/repos/kubernetes/k8s.io/issues/1596/comments",
      },
      "commits": Object {
        "href": "https://api.github.com/repos/kubernetes/k8s.io/pulls/1596/commits",
      },
      "html": Object {
        "href": "https://github.com/kubernetes/k8s.io/pull/1596",
      },
      "issue": Object {
        "href": "https://api.github.com/repos/kubernetes/k8s.io/issues/1596",
      },
      "review_comment": Object {
        "href": "https://api.github.com/repos/kubernetes/k8s.io/pulls/comments{/number}",
      },
      "review_comments": Object {
        "href": "https://api.github.com/repos/kubernetes/k8s.io/pulls/1596/comments",
      },
      "self": Object {
        "href": "https://api.github.com/repos/kubernetes/k8s.io/pulls/1596",
      },
      "statuses": Object {
        "href": "https://api.github.com/repos/kubernetes/k8s.io/statuses/93f8e771155d75e5cd48f8cd92be90841eb0ad6c",
      },
    },
    "active_lock_reason": null,
    "assignee": null,
    "assignees": Array [],
    "author_association": "MEMBER",
    "auto_merge": null,
    "base": Object {
      "label": "kubernetes:master",
      "ref": "master",
      "repo": Object {
        "archive_url": "https://api.github.com/repos/kubernetes/k8s.io/{archive_format}{/ref}",
        "archived": false,
        "assignees_url": "https://api.github.com/repos/kubernetes/k8s.io/assignees{/user}",
        "blobs_url": "https://api.github.com/repos/kubernetes/k8s.io/git/blobs{/sha}",
        "branches_url": "https://api.github.com/repos/kubernetes/k8s.io/branches{/branch}",
        "clone_url": "https://github.com/kubernetes/k8s.io.git",
        "collaborators_url": "https://api.github.com/repos/kubernetes/k8s.io/collaborators{/collaborator}",
        "comments_url": "https://api.github.com/repos/kubernetes/k8s.io/comments{/number}",
        "commits_url": "https://api.github.com/repos/kubernetes/k8s.io/commits{/sha}",
        "compare_url": "https://api.github.com/repos/kubernetes/k8s.io/compare/{base}...{head}",
        "contents_url": "https://api.github.com/repos/kubernetes/k8s.io/contents/{+path}",
        "contributors_url": "https://api.github.com/repos/kubernetes/k8s.io/contributors",
        "created_at": "2016-08-22T22:54:56Z",
        "default_branch": "master",
        "deployments_url": "https://api.github.com/repos/kubernetes/k8s.io/deployments",
        "description": "Kubernetes files for various *.k8s.io sites",
        "disabled": false,
        "downloads_url": "https://api.github.com/repos/kubernetes/k8s.io/downloads",
        "events_url": "https://api.github.com/repos/kubernetes/k8s.io/events",
        "fork": false,
        "forks": 320,
        "forks_count": 320,
        "forks_url": "https://api.github.com/repos/kubernetes/k8s.io/forks",
        "full_name": "kubernetes/k8s.io",
        "git_commits_url": "https://api.github.com/repos/kubernetes/k8s.io/git/commits{/sha}",
        "git_refs_url": "https://api.github.com/repos/kubernetes/k8s.io/git/refs{/sha}",
        "git_tags_url": "https://api.github.com/repos/kubernetes/k8s.io/git/tags{/sha}",
        "git_url": "git://github.com/kubernetes/k8s.io.git",
        "has_downloads": true,
        "has_issues": true,
        "has_pages": false,
        "has_projects": true,
        "has_wiki": true,
        "homepage": null,
        "hooks_url": "https://api.github.com/repos/kubernetes/k8s.io/hooks",
        "html_url": "https://github.com/kubernetes/k8s.io",
        "id": 66314075,
        "issue_comment_url": "https://api.github.com/repos/kubernetes/k8s.io/issues/comments{/number}",
        "issue_events_url": "https://api.github.com/repos/kubernetes/k8s.io/issues/events{/number}",
        "issues_url": "https://api.github.com/repos/kubernetes/k8s.io/issues{/number}",
        "keys_url": "https://api.github.com/repos/kubernetes/k8s.io/keys{/key_id}",
        "labels_url": "https://api.github.com/repos/kubernetes/k8s.io/labels{/name}",
        "language": "Shell",
        "languages_url": "https://api.github.com/repos/kubernetes/k8s.io/languages",
        "license": Object {
          "key": "apache-2.0",
          "name": "Apache License 2.0",
          "node_id": "MDc6TGljZW5zZTI=",
          "spdx_id": "Apache-2.0",
          "url": "https://api.github.com/licenses/apache-2.0",
        },
        "merges_url": "https://api.github.com/repos/kubernetes/k8s.io/merges",
        "milestones_url": "https://api.github.com/repos/kubernetes/k8s.io/milestones{/number}",
        "mirror_url": null,
        "name": "k8s.io",
        "node_id": "MDEwOlJlcG9zaXRvcnk2NjMxNDA3NQ==",
        "notifications_url": "https://api.github.com/repos/kubernetes/k8s.io/notifications{?since,all,participating}",
        "open_issues": 77,
        "open_issues_count": 77,
        "owner": Object {
          "avatar_url": "https://avatars.githubusercontent.com/u/13629408?v=4",
          "events_url": "https://api.github.com/users/kubernetes/events{/privacy}",
          "followers_url": "https://api.github.com/users/kubernetes/followers",
          "following_url": "https://api.github.com/users/kubernetes/following{/other_user}",
          "gists_url": "https://api.github.com/users/kubernetes/gists{/gist_id}",
          "gravatar_id": "",
          "html_url": "https://github.com/kubernetes",
          "id": 13629408,
          "login": "kubernetes",
          "node_id": "MDEyOk9yZ2FuaXphdGlvbjEzNjI5NDA4",
          "organizations_url": "https://api.github.com/users/kubernetes/orgs",
          "received_events_url": "https://api.github.com/users/kubernetes/received_events",
          "repos_url": "https://api.github.com/users/kubernetes/repos",
          "site_admin": false,
          "starred_url": "https://api.github.com/users/kubernetes/starred{/owner}{/repo}",
          "subscriptions_url": "https://api.github.com/users/kubernetes/subscriptions",
          "type": "Organization",
          "url": "https://api.github.com/users/kubernetes",
        },
        "private": false,
        "pulls_url": "https://api.github.com/repos/kubernetes/k8s.io/pulls{/number}",
        "pushed_at": "2021-02-01T18:53:50Z",
        "releases_url": "https://api.github.com/repos/kubernetes/k8s.io/releases{/id}",
        "size": 6582,
        "ssh_url": "git@github.com:kubernetes/k8s.io.git",
        "stargazers_count": 226,
        "stargazers_url": "https://api.github.com/repos/kubernetes/k8s.io/stargazers",
        "statuses_url": "https://api.github.com/repos/kubernetes/k8s.io/statuses/{sha}",
        "subscribers_url": "https://api.github.com/repos/kubernetes/k8s.io/subscribers",
        "subscription_url": "https://api.github.com/repos/kubernetes/k8s.io/subscription",
        "svn_url": "https://github.com/kubernetes/k8s.io",
        "tags_url": "https://api.github.com/repos/kubernetes/k8s.io/tags",
        "teams_url": "https://api.github.com/repos/kubernetes/k8s.io/teams",
        "trees_url": "https://api.github.com/repos/kubernetes/k8s.io/git/trees{/sha}",
        "updated_at": "2021-02-01T18:53:53Z",
        "url": "https://api.github.com/repos/kubernetes/k8s.io",
        "watchers": 226,
        "watchers_count": 226,
      },
      "sha": "798f7d6ac63d50dc79e96f5915644fad1f2e851b",
      "user": Object {
        "avatar_url": "https://avatars.githubusercontent.com/u/13629408?v=4",
        "events_url": "https://api.github.com/users/kubernetes/events{/privacy}",
        "followers_url": "https://api.github.com/users/kubernetes/followers",
        "following_url": "https://api.github.com/users/kubernetes/following{/other_user}",
        "gists_url": "https://api.github.com/users/kubernetes/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/kubernetes",
        "id": 13629408,
        "login": "kubernetes",
        "node_id": "MDEyOk9yZ2FuaXphdGlvbjEzNjI5NDA4",
        "organizations_url": "https://api.github.com/users/kubernetes/orgs",
        "received_events_url": "https://api.github.com/users/kubernetes/received_events",
        "repos_url": "https://api.github.com/users/kubernetes/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/kubernetes/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/kubernetes/subscriptions",
        "type": "Organization",
        "url": "https://api.github.com/users/kubernetes",
      },
    },
    "body": null,
    "closed_at": null,
    "comments_url": "https://api.github.com/repos/kubernetes/k8s.io/issues/1596/comments",
    "commits_url": "https://api.github.com/repos/kubernetes/k8s.io/pulls/1596/commits",
    "created_at": "2021-01-29T16:30:46Z",
    "diff_url": "https://github.com/kubernetes/k8s.io/pull/1596.diff",
    "draft": false,
    "head": Object {
      "label": "justinsb:kops_artifacts_1.19.0",
      "ref": "kops_artifacts_1.19.0",
      "repo": Object {
        "archive_url": "https://api.github.com/repos/justinsb/k8s.io/{archive_format}{/ref}",
        "archived": false,
        "assignees_url": "https://api.github.com/repos/justinsb/k8s.io/assignees{/user}",
        "blobs_url": "https://api.github.com/repos/justinsb/k8s.io/git/blobs{/sha}",
        "branches_url": "https://api.github.com/repos/justinsb/k8s.io/branches{/branch}",
        "clone_url": "https://github.com/justinsb/k8s.io.git",
        "collaborators_url": "https://api.github.com/repos/justinsb/k8s.io/collaborators{/collaborator}",
        "comments_url": "https://api.github.com/repos/justinsb/k8s.io/comments{/number}",
        "commits_url": "https://api.github.com/repos/justinsb/k8s.io/commits{/sha}",
        "compare_url": "https://api.github.com/repos/justinsb/k8s.io/compare/{base}...{head}",
        "contents_url": "https://api.github.com/repos/justinsb/k8s.io/contents/{+path}",
        "contributors_url": "https://api.github.com/repos/justinsb/k8s.io/contributors",
        "created_at": "2019-01-30T22:34:38Z",
        "default_branch": "master",
        "deployments_url": "https://api.github.com/repos/justinsb/k8s.io/deployments",
        "description": "Kubernetes files for various *.k8s.io sites",
        "disabled": false,
        "downloads_url": "https://api.github.com/repos/justinsb/k8s.io/downloads",
        "events_url": "https://api.github.com/repos/justinsb/k8s.io/events",
        "fork": true,
        "forks": 0,
        "forks_count": 0,
        "forks_url": "https://api.github.com/repos/justinsb/k8s.io/forks",
        "full_name": "justinsb/k8s.io",
        "git_commits_url": "https://api.github.com/repos/justinsb/k8s.io/git/commits{/sha}",
        "git_refs_url": "https://api.github.com/repos/justinsb/k8s.io/git/refs{/sha}",
        "git_tags_url": "https://api.github.com/repos/justinsb/k8s.io/git/tags{/sha}",
        "git_url": "git://github.com/justinsb/k8s.io.git",
        "has_downloads": true,
        "has_issues": false,
        "has_pages": false,
        "has_projects": true,
        "has_wiki": true,
        "homepage": null,
        "hooks_url": "https://api.github.com/repos/justinsb/k8s.io/hooks",
        "html_url": "https://github.com/justinsb/k8s.io",
        "id": 168426055,
        "issue_comment_url": "https://api.github.com/repos/justinsb/k8s.io/issues/comments{/number}",
        "issue_events_url": "https://api.github.com/repos/justinsb/k8s.io/issues/events{/number}",
        "issues_url": "https://api.github.com/repos/justinsb/k8s.io/issues{/number}",
        "keys_url": "https://api.github.com/repos/justinsb/k8s.io/keys{/key_id}",
        "labels_url": "https://api.github.com/repos/justinsb/k8s.io/labels{/name}",
        "language": "Shell",
        "languages_url": "https://api.github.com/repos/justinsb/k8s.io/languages",
        "license": Object {
          "key": "apache-2.0",
          "name": "Apache License 2.0",
          "node_id": "MDc6TGljZW5zZTI=",
          "spdx_id": "Apache-2.0",
          "url": "https://api.github.com/licenses/apache-2.0",
        },
        "merges_url": "https://api.github.com/repos/justinsb/k8s.io/merges",
        "milestones_url": "https://api.github.com/repos/justinsb/k8s.io/milestones{/number}",
        "mirror_url": null,
        "name": "k8s.io",
        "node_id": "MDEwOlJlcG9zaXRvcnkxNjg0MjYwNTU=",
        "notifications_url": "https://api.github.com/repos/justinsb/k8s.io/notifications{?since,all,participating}",
        "open_issues": 0,
        "open_issues_count": 0,
        "owner": Object {
          "avatar_url": "https://avatars.githubusercontent.com/u/100893?v=4",
          "events_url": "https://api.github.com/users/justinsb/events{/privacy}",
          "followers_url": "https://api.github.com/users/justinsb/followers",
          "following_url": "https://api.github.com/users/justinsb/following{/other_user}",
          "gists_url": "https://api.github.com/users/justinsb/gists{/gist_id}",
          "gravatar_id": "",
          "html_url": "https://github.com/justinsb",
          "id": 100893,
          "login": "justinsb",
          "node_id": "MDQ6VXNlcjEwMDg5Mw==",
          "organizations_url": "https://api.github.com/users/justinsb/orgs",
          "received_events_url": "https://api.github.com/users/justinsb/received_events",
          "repos_url": "https://api.github.com/users/justinsb/repos",
          "site_admin": false,
          "starred_url": "https://api.github.com/users/justinsb/starred{/owner}{/repo}",
          "subscriptions_url": "https://api.github.com/users/justinsb/subscriptions",
          "type": "User",
          "url": "https://api.github.com/users/justinsb",
        },
        "private": false,
        "pulls_url": "https://api.github.com/repos/justinsb/k8s.io/pulls{/number}",
        "pushed_at": "2021-01-29T16:30:44Z",
        "releases_url": "https://api.github.com/repos/justinsb/k8s.io/releases{/id}",
        "size": 6590,
        "ssh_url": "git@github.com:justinsb/k8s.io.git",
        "stargazers_count": 0,
        "stargazers_url": "https://api.github.com/repos/justinsb/k8s.io/stargazers",
        "statuses_url": "https://api.github.com/repos/justinsb/k8s.io/statuses/{sha}",
        "subscribers_url": "https://api.github.com/repos/justinsb/k8s.io/subscribers",
        "subscription_url": "https://api.github.com/repos/justinsb/k8s.io/subscription",
        "svn_url": "https://github.com/justinsb/k8s.io",
        "tags_url": "https://api.github.com/repos/justinsb/k8s.io/tags",
        "teams_url": "https://api.github.com/repos/justinsb/k8s.io/teams",
        "trees_url": "https://api.github.com/repos/justinsb/k8s.io/git/trees{/sha}",
        "updated_at": "2020-10-24T15:17:26Z",
        "url": "https://api.github.com/repos/justinsb/k8s.io",
        "watchers": 0,
        "watchers_count": 0,
      },
      "sha": "93f8e771155d75e5cd48f8cd92be90841eb0ad6c",
      "user": Object {
        "avatar_url": "https://avatars.githubusercontent.com/u/100893?v=4",
        "events_url": "https://api.github.com/users/justinsb/events{/privacy}",
        "followers_url": "https://api.github.com/users/justinsb/followers",
        "following_url": "https://api.github.com/users/justinsb/following{/other_user}",
        "gists_url": "https://api.github.com/users/justinsb/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/justinsb",
        "id": 100893,
        "login": "justinsb",
        "node_id": "MDQ6VXNlcjEwMDg5Mw==",
        "organizations_url": "https://api.github.com/users/justinsb/orgs",
        "received_events_url": "https://api.github.com/users/justinsb/received_events",
        "repos_url": "https://api.github.com/users/justinsb/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/justinsb/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/justinsb/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/justinsb",
      },
    },
    "html_url": "https://github.com/kubernetes/k8s.io/pull/1596",
    "id": 564096878,
    "issue_url": "https://api.github.com/repos/kubernetes/k8s.io/issues/1596",
    "labels": Array [
      Object {
        "color": "0ffa16",
        "default": false,
        "description": "Indicates a PR has been approved by an approver from all required OWNERS files.",
        "id": 763991132,
        "name": "approved",
        "node_id": "MDU6TGFiZWw3NjM5OTExMzI=",
        "url": "https://api.github.com/repos/kubernetes/k8s.io/labels/approved",
      },
      Object {
        "color": "0052cc",
        "default": false,
        "description": "Issues or PRs related to the hosting of release artifacts for subprojects",
        "id": 1342938528,
        "name": "area/artifacts",
        "node_id": "MDU6TGFiZWwxMzQyOTM4NTI4",
        "url": "https://api.github.com/repos/kubernetes/k8s.io/labels/area/artifacts",
      },
      Object {
        "color": "bfe5bf",
        "default": false,
        "description": "Indicates the PR's author has signed the CNCF CLA.",
        "id": 491201220,
        "name": "cncf-cla: yes",
        "node_id": "MDU6TGFiZWw0OTEyMDEyMjA=",
        "url": "https://api.github.com/repos/kubernetes/k8s.io/labels/cncf-cla:%20yes",
      },
      Object {
        "color": "eebb00",
        "default": false,
        "description": "Denotes a PR that changes 30-99 lines, ignoring generated files.",
        "id": 678419081,
        "name": "size/M",
        "node_id": "MDU6TGFiZWw2Nzg0MTkwODE=",
        "url": "https://api.github.com/repos/kubernetes/k8s.io/labels/size/M",
      },
      Object {
        "color": "d2b48c",
        "default": false,
        "description": "Categorizes an issue or PR as relevant to WG k8s Infra.",
        "id": 1190013127,
        "name": "wg/k8s-infra",
        "node_id": "MDU6TGFiZWwxMTkwMDEzMTI3",
        "url": "https://api.github.com/repos/kubernetes/k8s.io/labels/wg/k8s-infra",
      },
    ],
    "locked": false,
    "merge_commit_sha": "41442520b8f1b1be0d147d2275a8525bf120926d",
    "merged_at": null,
    "milestone": null,
    "node_id": "MDExOlB1bGxSZXF1ZXN0NTY0MDk2ODc4",
    "number": 1596,
    "patch_url": "https://github.com/kubernetes/k8s.io/pull/1596.patch",
    "requested_reviewers": Array [
      Object {
        "avatar_url": "https://avatars.githubusercontent.com/u/410764?v=4",
        "events_url": "https://api.github.com/users/rdrgmnzs/events{/privacy}",
        "followers_url": "https://api.github.com/users/rdrgmnzs/followers",
        "following_url": "https://api.github.com/users/rdrgmnzs/following{/other_user}",
        "gists_url": "https://api.github.com/users/rdrgmnzs/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/rdrgmnzs",
        "id": 410764,
        "login": "rdrgmnzs",
        "node_id": "MDQ6VXNlcjQxMDc2NA==",
        "organizations_url": "https://api.github.com/users/rdrgmnzs/orgs",
        "received_events_url": "https://api.github.com/users/rdrgmnzs/received_events",
        "repos_url": "https://api.github.com/users/rdrgmnzs/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/rdrgmnzs/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/rdrgmnzs/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/rdrgmnzs",
      },
      Object {
        "avatar_url": "https://avatars.githubusercontent.com/u/6972966?v=4",
        "events_url": "https://api.github.com/users/KashifSaadat/events{/privacy}",
        "followers_url": "https://api.github.com/users/KashifSaadat/followers",
        "following_url": "https://api.github.com/users/KashifSaadat/following{/other_user}",
        "gists_url": "https://api.github.com/users/KashifSaadat/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/KashifSaadat",
        "id": 6972966,
        "login": "KashifSaadat",
        "node_id": "MDQ6VXNlcjY5NzI5NjY=",
        "organizations_url": "https://api.github.com/users/KashifSaadat/orgs",
        "received_events_url": "https://api.github.com/users/KashifSaadat/received_events",
        "repos_url": "https://api.github.com/users/KashifSaadat/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/KashifSaadat/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/KashifSaadat/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/KashifSaadat",
      },
    ],
    "requested_teams": Array [],
    "review_comment_url": "https://api.github.com/repos/kubernetes/k8s.io/pulls/comments{/number}",
    "review_comments_url": "https://api.github.com/repos/kubernetes/k8s.io/pulls/1596/comments",
    "state": "open",
    "statuses_url": "https://api.github.com/repos/kubernetes/k8s.io/statuses/93f8e771155d75e5cd48f8cd92be90841eb0ad6c",
    "title": "Promote kOps 1.19.0 binary artifacts",
    "updated_at": "2021-01-29T16:31:00Z",
    "url": "https://api.github.com/repos/kubernetes/k8s.io/pulls/1596",
    "user": Object {
      "avatar_url": "https://avatars.githubusercontent.com/u/100893?v=4",
      "events_url": "https://api.github.com/users/justinsb/events{/privacy}",
      "followers_url": "https://api.github.com/users/justinsb/followers",
      "following_url": "https://api.github.com/users/justinsb/following{/other_user}",
      "gists_url": "https://api.github.com/users/justinsb/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/justinsb",
      "id": 100893,
      "login": "justinsb",
      "node_id": "MDQ6VXNlcjEwMDg5Mw==",
      "organizations_url": "https://api.github.com/users/justinsb/orgs",
      "received_events_url": "https://api.github.com/users/justinsb/received_events",
      "repos_url": "https://api.github.com/users/justinsb/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/justinsb/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/justinsb/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/justinsb",
    },
  },
  1234,
]
`;

exports[`github Query repo, push all into SQS 2`] = `
Array [
  Object {
    "active_lock_reason": null,
    "assignee": Object {
      "avatar_url": "https://avatars.githubusercontent.com/u/49258?v=4",
      "events_url": "https://api.github.com/users/spiffxp/events{/privacy}",
      "followers_url": "https://api.github.com/users/spiffxp/followers",
      "following_url": "https://api.github.com/users/spiffxp/following{/other_user}",
      "gists_url": "https://api.github.com/users/spiffxp/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/spiffxp",
      "id": 49258,
      "login": "spiffxp",
      "node_id": "MDQ6VXNlcjQ5MjU4",
      "organizations_url": "https://api.github.com/users/spiffxp/orgs",
      "received_events_url": "https://api.github.com/users/spiffxp/received_events",
      "repos_url": "https://api.github.com/users/spiffxp/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/spiffxp/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/spiffxp/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/spiffxp",
    },
    "assignees": Array [
      Object {
        "avatar_url": "https://avatars.githubusercontent.com/u/49258?v=4",
        "events_url": "https://api.github.com/users/spiffxp/events{/privacy}",
        "followers_url": "https://api.github.com/users/spiffxp/followers",
        "following_url": "https://api.github.com/users/spiffxp/following{/other_user}",
        "gists_url": "https://api.github.com/users/spiffxp/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/spiffxp",
        "id": 49258,
        "login": "spiffxp",
        "node_id": "MDQ6VXNlcjQ5MjU4",
        "organizations_url": "https://api.github.com/users/spiffxp/orgs",
        "received_events_url": "https://api.github.com/users/spiffxp/received_events",
        "repos_url": "https://api.github.com/users/spiffxp/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/spiffxp/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/spiffxp/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/spiffxp",
      },
    ],
    "author_association": "MEMBER",
    "body": "Part of umbrella issue https://github.com/kubernetes/org/issues/2222

Issue to spec out and then run through renaming the default branch for this repository

- update pre/postsubmits to trigger on old branch name and new branch name
- determine whether periodics use default branch or have name hardcoded in git commands
  - if hardcoded, does attempting to checkout old name break?
- determine whether branch name is part of any job names
- determine if any docs need to be updated
- send notice
- rename branch (ref: https://github.com/github/renaming#renaming-existing-branches)
- if necessary, update periodics to refer to new branch name
- if necessary, rename jobs
- update branch protection config
- update jobs to only trigger on new branch name
- make sure things still work
  - keep an eye on ci and prs for a bit
  - trial the local development experience with pre-rename clone
- send notice

/sig contributor-experience
/area github-management
trialing a repo for this subproject
/wg k8s-infra
owns this repo
/sig testing
to discover any prow issues
/milestone v1.21
/priority important-soon
/assign @spiffxp 
I plan on speccing this out, whether/when to execute depends on how kubernetes/org goes",
    "closed_at": null,
    "comments": 2,
    "comments_url": "https://api.github.com/repos/kubernetes/k8s.io/issues/1597/comments",
    "created_at": "2021-01-29T17:01:24Z",
    "events_url": "https://api.github.com/repos/kubernetes/k8s.io/issues/1597/events",
    "html_url": "https://github.com/kubernetes/k8s.io/issues/1597",
    "id": 797039354,
    "labels": Array [
      Object {
        "color": "eb6420",
        "default": false,
        "description": "Must be staffed and worked on either currently, or very soon, ideally in time for the next release.",
        "id": 763983143,
        "name": "priority/important-soon",
        "node_id": "MDU6TGFiZWw3NjM5ODMxNDM=",
        "url": "https://api.github.com/repos/kubernetes/k8s.io/labels/priority/important-soon",
      },
      Object {
        "color": "d2b48c",
        "default": false,
        "description": "Categorizes an issue or PR as relevant to SIG Contributor Experience.",
        "id": 763981930,
        "name": "sig/contributor-experience",
        "node_id": "MDU6TGFiZWw3NjM5ODE5MzA=",
        "url": "https://api.github.com/repos/kubernetes/k8s.io/labels/sig/contributor-experience",
      },
      Object {
        "color": "d2b48c",
        "default": false,
        "description": "Categorizes an issue or PR as relevant to SIG Testing.",
        "id": 763989172,
        "name": "sig/testing",
        "node_id": "MDU6TGFiZWw3NjM5ODkxNzI=",
        "url": "https://api.github.com/repos/kubernetes/k8s.io/labels/sig/testing",
      },
      Object {
        "color": "d2b48c",
        "default": false,
        "description": "Categorizes an issue or PR as relevant to WG k8s Infra.",
        "id": 1190013127,
        "name": "wg/k8s-infra",
        "node_id": "MDU6TGFiZWwxMTkwMDEzMTI3",
        "url": "https://api.github.com/repos/kubernetes/k8s.io/labels/wg/k8s-infra",
      },
    ],
    "labels_url": "https://api.github.com/repos/kubernetes/k8s.io/issues/1597/labels{/name}",
    "locked": false,
    "milestone": Object {
      "closed_at": null,
      "closed_issues": 63,
      "created_at": "2021-01-13T19:24:54Z",
      "creator": Object {
        "avatar_url": "https://avatars.githubusercontent.com/u/49258?v=4",
        "events_url": "https://api.github.com/users/spiffxp/events{/privacy}",
        "followers_url": "https://api.github.com/users/spiffxp/followers",
        "following_url": "https://api.github.com/users/spiffxp/following{/other_user}",
        "gists_url": "https://api.github.com/users/spiffxp/gists{/gist_id}",
        "gravatar_id": "",
        "html_url": "https://github.com/spiffxp",
        "id": 49258,
        "login": "spiffxp",
        "node_id": "MDQ6VXNlcjQ5MjU4",
        "organizations_url": "https://api.github.com/users/spiffxp/orgs",
        "received_events_url": "https://api.github.com/users/spiffxp/received_events",
        "repos_url": "https://api.github.com/users/spiffxp/repos",
        "site_admin": false,
        "starred_url": "https://api.github.com/users/spiffxp/starred{/owner}{/repo}",
        "subscriptions_url": "https://api.github.com/users/spiffxp/subscriptions",
        "type": "User",
        "url": "https://api.github.com/users/spiffxp",
      },
      "description": "",
      "due_on": "2021-03-31T07:00:00Z",
      "html_url": "https://github.com/kubernetes/k8s.io/milestone/5",
      "id": 6307518,
      "labels_url": "https://api.github.com/repos/kubernetes/k8s.io/milestones/5/labels",
      "node_id": "MDk6TWlsZXN0b25lNjMwNzUxOA==",
      "number": 5,
      "open_issues": 36,
      "state": "open",
      "title": "v1.21",
      "updated_at": "2021-02-01T23:04:08Z",
      "url": "https://api.github.com/repos/kubernetes/k8s.io/milestones/5",
    },
    "node_id": "MDU6SXNzdWU3OTcwMzkzNTQ=",
    "number": 1597,
    "performed_via_github_app": null,
    "repository_url": "https://api.github.com/repos/kubernetes/k8s.io",
    "state": "open",
    "title": "Rename default branch for kubernetes/k8s.io",
    "updated_at": "2021-01-29T23:02:39Z",
    "url": "https://api.github.com/repos/kubernetes/k8s.io/issues/1597",
    "user": Object {
      "avatar_url": "https://avatars.githubusercontent.com/u/49258?v=4",
      "events_url": "https://api.github.com/users/spiffxp/events{/privacy}",
      "followers_url": "https://api.github.com/users/spiffxp/followers",
      "following_url": "https://api.github.com/users/spiffxp/following{/other_user}",
      "gists_url": "https://api.github.com/users/spiffxp/gists{/gist_id}",
      "gravatar_id": "",
      "html_url": "https://github.com/spiffxp",
      "id": 49258,
      "login": "spiffxp",
      "node_id": "MDQ6VXNlcjQ5MjU4",
      "organizations_url": "https://api.github.com/users/spiffxp/orgs",
      "received_events_url": "https://api.github.com/users/spiffxp/received_events",
      "repos_url": "https://api.github.com/users/spiffxp/repos",
      "site_admin": false,
      "starred_url": "https://api.github.com/users/spiffxp/starred{/owner}{/repo}",
      "subscriptions_url": "https://api.github.com/users/spiffxp/subscriptions",
      "type": "User",
      "url": "https://api.github.com/users/spiffxp",
    },
  },
  1234,
]
`;
